    * version 2.0 (probably)
    * IMPORTANT: 'verbose' is now used for message levels. Logging is
      controlled by the extensions.liberator.loglevel preference.
    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively
    * add :messages and 'messages'
    * add :runtime
    * add 'runtimepath'
    * allow ; hints to work in the multiline output widget
    * add :scriptnames
    * add commandline completion to 'activate', 'cpt', 'defsearch', 'pageinfo',
      'newtab' and 'popups'
    * add 'helpfile' option
    * add 'wildignore' option
    * add :finish command
    * new events BookmarkAdd, ShellCmdPost, VimperatorLeavePre
    * add 'cdpath' option
    * allow :dialog to open the cookies manager
    * add 'loadplugins' option
    * add count support to C-^ (Kazuo)
    * add 'eventignore' option
    * add :tabdetach command
    * new ;b extended hint mode (thanks Daniel Schaffrath)
    * many bug fixes

2008-08-16:
    * version 1.2
    * IMPORTANT: changed :command to behave like Vim's version.
      Eg. An alert command specified previously as
          :command AlertMe alert(args)
      should now be defined as
          :command AlertMe :js alert(<args>)
    * IMPORTANT: changed (again) the default keybinding to temporarily disable all
      Vimperator keybindings from ctrl-q to ctrl-z since many users complained
      about hitting ctrl-q twice and exiting vimperator
    * IMPORTANT: removed old :buffers! buffer window, as it was ugly and slightly broken
      use "B" or :buffers instead
    * IMPORTANT: input fields are not blured anymore by default after a page has loaded
      use :set [no]focuscontent to control the behavior (thanks Paul Sobey for the 
      generous donation which made this behavior possible)