@@ -39,6 +39,7 @@ liberator.config = { //{{{
     get visualbellWindow() getBrowser().mPanelContainer,
 
     autocommands: [["BookmarkAdd",        "Triggered after a page is bookmarked"],
+                   ["DOMLoad",            "Triggered when a page's DOM content has fully loaded"],
                    ["LocationChange",     "Triggered when changing tabs or when naviagtion to a new location"],
                    ["PageLoadPre",        "Triggered after a page load is initiated"],
                    ["PageLoad",           "Triggered when a page gets (re)loaded/opened"],
