@@ -21,6 +21,7 @@ Available {events}:
 
 `--------------------`----------------------------------------
 *BookmarkAdd*        Triggered after a page is bookmarked
+*DOMLoad*            Triggered when a page's DOM content has fully loaded
 *LocationChange*     Triggered when changing tabs or when navigating to a new location
 *PageLoadPre*        Triggered after a page load is initiated.
 *PageLoad*           Triggered when a page gets (re)loaded/opened
