@@ -7,6 +7,7 @@
       special versions for the old behavior
     * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
       VimperatorLeave respectively
+    * add DOMLoad autocmd event
     * add :messages and 'messages'
     * add :runtime
     * add 'runtimepath'
